--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="createElement"></div>
+    <div id="createComponent"></div>
+    <div id="createPureComponent"></div>
+    <div id="createFuncComponent"></div>
   </body>
 </html>
